# idEAS

./: .gitignore  README.md  docker-compose.yml
.github/: FUNDING.yml
20220824/: docker-compose.yml
20220824/bus/: docker-compose.yml
20220824/data/db/: Dockerfile  initdb.sh
20220824/data/db/sql/: 30_create_app_role.sql  40_init.sql  90_create_test_accounts.sql
20220824/secrets/: jwt.txt  root-ca.key  site.cnf  site.csr  site.key  url_db.txt
20220824/services/: Cargo.toml
20220824/services/api/src/: extractors.rs  middleware.rs
20220824/services/bus/src/: lib.rs  subscriber.rs
20220824/services/common/: Cargo.toml
20220824/services/common/src/: lib.rs  role.rs
20220824/services/data/users/: Cargo.toml
20220824/services/echo/: Dockerfile
20220824/services/echo/src/: main.rs
20220824/services/mailer/src/: lib.rs
20220824/services/shout/src/: main.rs
20220824/ui/: nginx.conf.orig  ui.conf
20220824/ui/admin/: angular.json  package-lock.json  package.json
20220824/ui/saas/: README.md  package-lock.json  package.json
20220824/ui/selenium/: test_dashboard.side  test_signin.side  user_signup.side
20220824/ui/swagger/: Dockerfile  nginx.conf  swagger.json
bus/: Dockerfile
data/: Dockerfile
data/csv/: currencies.csv  permissions.csv
data/db/: Dockerfile
data/db/sql/: 10_create.sql  10_create_tables.sql  20_create_app_role.sql  20_create_procs.sql  30_init.sql  40_init.sql  90_create_test_accounts.sql
data/db/sql/accounting/: create_tables.sql
data/db/sql/common/: create.sql  create_procs.sql  create_tables.sql  init.sql
data/db/sql/iam/: create.sql  create_procs.sql  create_tables.sql  init.sql
data/db/sql/tenants/: create.sql  create_procs.sql  init.sql
data/sql/postgres/: 10_schema.sql  20_init.sql  90_create_test_accounts.sql
data/sql/postgres/accounting/: procs.sql  tables.sql
data/sql/postgres/client/: init.sql  procs.sql  tables.sql
data/sql/postgres/common/: procs.sql  tables.sql
data/sql/postgres/crm/: procs.sql  tables.sql
secrets/: root-ca.cnf  root-ca.crt  root-ca.csr  root-ca.srl  sample_config.json  site.crt
services/: Cargo.toml  Dockerfile
services/api/: Cargo.toml
services/api/src/: data.rs  endpoints.rs  main.rs  middleware.rs  models.rs  utils.rs
services/api/src/data/: db.rs  default.rs  user.rs  users.rs
services/api/src/endpoints/: common.rs  status.rs  tenant.rs  tenants.rs  user.rs
services/api/src/endpoints/tenant/: admin.rs  mod.rs  tenant.rs
services/api/src/extractors/: user.rs
services/api/src/guards/: auth_guard.rs
services/api/src/middleware/: cache.rs  cors.rs  user.rs
services/api/src/models/: api_response.rs  permissions.rs
services/api/src/utils/: bus.rs  jwt.rs
services/bus/: Cargo.toml
services/bus/src/: bus.rs  lib.rs  publisher.rs  subscriber.rs
services/common/: Cargo.toml
services/common/src/: email.rs  lib.rs  tenant.rs  user.rs
services/data/auth/: Cargo.toml
services/data/auth/src/: auth.rs  db.rs  jwt.rs  lib.rs
services/data/data/: Cargo.toml
services/data/roles/: Cargo.toml
services/data/tenants/: Cargo.toml
services/data/users/: Cargo.toml
services/data/users/src/: email.rs  jwt.rs  lib.rs  user_param.rs  users.rs
services/echo/: Cargo.toml
services/kafka/: create_topics.sh  setup_kafka_client.sh
services/mailer/: Cargo.toml
services/mailer/src/: mailer.rs
services/rust/: Cargo.toml  Dockerfile  wrapper.sh
services/rust/api/: Cargo.toml
services/rust/api/src/: main.rs
services/rust/api/src/classes/: user.rs
services/rust/api/src/endpoints/: auth.rs  clients.rs  countries.rs  mod.rs  status.rs  user.rs  users.rs
services/rust/api/src/endpoints/admin/: clients.rs  mod.rs  permissions.rs  roles.rs  user.rs  users.rs
services/rust/api/src/endpoints/common/: countries.rs  currencies.rs  mod.rs
services/rust/api/src/endpoints/inventory/: mod.rs
services/rust/api/src/endpoints/inventory/item/: category.rs  item.rs  mod.rs
services/rust/api/src/extractors/: mod.rs  user_parameter.rs
services/rust/api/src/guards/: mod.rs  permission.rs
services/rust/api/src/middleware/: cors.rs  user.rs
services/rust/api/src/services/: mod.rs
services/rust/auth/: Cargo.toml
services/rust/auth/src/: main.rs
services/rust/auth/src/classes/: app_config.rs  mod.rs  user.rs
services/rust/auth/src/endpoints/: auth.rs  mod.rs
services/rust/auth/src/middleware/: mod.rs  user.rs
services/rust/auth/src/services/: auth_token.rs  config.rs  data.rs  mod.rs
services/rust/common/: Cargo.toml
services/rust/config/: Cargo.toml
services/rust/consumers/qmailer/: Cargo.toml
services/rust/consumers/qmailer/src/: main.rs
services/rust/data/pg/: Cargo.toml
services/rust/data/pg/src/: auth.rs  client.rs  countries.rs  currencies.rs  lib.rs  organization.rs  people.rs  uom.rs  user.rs  users.rs
services/rust/data/pg/src/client/: client.rs
services/rust/data/pg/src/crm/: contact_email.rs  mod.rs
services/rust/data/pg/src/iam/: mod.rs  permission.rs  role.rs  user.rs  user_client.rs
services/rust/data/pg/src/inventory/: item.rs  item_balances.rs  mod.rs
services/rust/data/pg/src/types/: email.rs
services/rust/etc/: config.json
services/rust/mailer/: Cargo.toml
services/rust/queue/: Cargo.toml
services/rust/queue/src/: lib.rs
services/rust/token/: Cargo.toml
services/rust/token/src/: lib.rs
services/shout/: Cargo.toml
services/shout/src/: main.rs
ui/: Dockerfile  nginx.conf  ui.conf
ui/admin/: README.md
ui/saas/: angular.json  curl.trace  karma.conf.js  package-lock.json  package.json
ui/saas/src/: index.html
ui/selenium/: test_signin.side  user_signup.side  user_signup_to_signin.side
ui/swagger/: nginx.conf  swagger.json
www/ng/admin/: angular.json  package-lock.json  package.json
www/ng/ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json
www/ng/user_registration/: README.md  angular.json  package-lock.json  package.json
www/nginx/: Dockerfile
www/nginx/conf/: ideas_ui.conf
www/swagger/: Dockerfile  auth.json  clients.json  countries.json  user.json
(+575 files in other folders)
