[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

http = "*"
actix-web = { version = "4", features = ["rustls"] }
actix-http = "*"

rustls = "*"
rustls-pemfile = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

uuid = { version = "0.8.2", features = ["v4", "serde"] }

futures = "*"

hmac = "0.12.0"
sha2 = "0.10.1"
jwt = "0.16.0"

chrono = { version = "0.4.19", features = [ "serde" ] }


common = { path = "../common" }
data = { path = "../data/data" }
users = { path = "../data/users" }
tenants = { path = "../data/tenants" }
roles = { path = "../data/roles" }

bus = { path = "../bus" }