[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
log = "*"
env_logger = "*"

kafka = "0.9.0"

serde = { version = "*", features = ["derive"] }
serde_json = "1.0"