[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lettre = "0.9.6"
lettre = "0.10.0-rc.6"
lettre_email = "0.9.4"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }