[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
serde = { version = "*", features = ["derive"] }

validator = { version = "0.14.0", features = ["derive"] }
postgres-types = { version = "*", features = ["derive"] }

uuid = { version = "0.8.2", features = ["v4", "serde"] }