[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

deadpool = "0.9.2"
deadpool-postgres = "0.10.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
postgres-types = { version = "*", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

hmac = "0.12.0"
sha2 = "0.10.1"
jwt = "0.16.0"

serde = { version = "*", features = ["derive"] }
chrono = { version = "0.4.19", features = [ "serde" ] }

common = { path = "../../common" }