[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "*"
actix-rt = "2.6.0"
rand = "0.8.4"


[dependencies]
log = "*"

deadpool = "0.9.2"
deadpool-postgres = "0.10.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
postgres-types = { version = "*", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

common = { path = "../../common" }