[package]
name = "queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "*"
ctor = "*"

common = { path = "../common" }

[dependencies]
log = "*"
kafka = "0.9"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

config = { path = "../config" }