[package]
name = "token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

hmac = "0.12"
sha2 = "0.10"
jwt = "0.16"

serde = { version = "*", features = ["derive"] }
chrono = { version = "0.4.19", features = [ "serde" ] }
