[package]
name = "qmailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

kafka = "0.9"


common = { path = "../../common" }
config = { path = "../../config" }
mailer = { path = "../../mailer" }